added lens table, is working now

--- a/dct_widgets/lensdriverbox/lensdriverbox.ui
+++ b/dct_widgets/lensdriverbox/lensdriverbox.ui
@@ -343,6 +343,9 @@
           <height>65</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
         <property name="editTriggers">
          <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::DoubleClicked|QAbstractItemView::SelectedClicked</set>
         </property>
