--- a/dct_widgets/lensdriverbox/lensdriverbox.ui
+++ b/dct_widgets/lensdriverbox/lensdriverbox.ui
@@ -31,7 +31,14 @@
        </widget>
       </item>
       <item row="0" column="0">
-       <widget class="QComboBox" name="cbxLensProfile"/>
+       <widget class="QComboBox" name="cbxLensProfile">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item row="0" column="2">
        <widget class="QLabel" name="lblLensActivated">
